--- a/mbbeats/package.json
+++ b/mbbeats/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-view-router": "^2.1.7",
     "sass-loader": "^13.1.0",
     "web-vitals": "^2.1.4"
   },
