--- a/mbbeats/package.json
+++ b/mbbeats/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-view-router": "^2.1.7",
